--- a/static/app/app-template/index.html
+++ b/static/app/app-template/index.html
@@ -13,10 +13,10 @@
                 <div class="left">
                     <ul class="link">
                         <li>
-                            <a href="/login">Login</a>
+                            <a href="#">Login</a>
                         </li>
                         <li class="signup">
-                            <a href="/signup">signup</a>
+                            <a href="/register/">signup</a>
                         </li>
                     </ul>
                 </div>
